add_library(YarsDataTypes  ${LIBRARY_TYPE} ScreenGeometry.cpp
                                           Pose.cpp
                                           P3D.cpp
                                           Colour.cpp
                                           Version.cpp
                                           Vertex.cpp
                                           PlyData.cpp
                                           Triangle.cpp
                                           Matrix.cpp
                                           Quaternion.cpp
                                           TransformationMatrix.cpp)
